--- a/debian/kwdjbdns_update.config
+++ b/debian/kwdjbdns_update.config
@@ -34,7 +34,7 @@ db_input critical kwdjbdns-update/domain || true
 db_go || true
 
 if [ -z "$DHCPDLEASEFILE" ] ; then
-	DHCPDLEASEFILE="/var/lib/dhcp3/dhcpd.leases"
+	DHCPDLEASEFILE="/var/lib/dhcp/dhcpd.leases"
 fi
 db_set kwdjbdns-update/leasefile "$DHCPDLEASEFILE" || true
 db_input critical kwdjbdns-update/leasefile || true
