--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: kwdjbdns_update
+Source: kwdjbdns-update
 Section: net
 Priority: optional
 Maintainer: Kai Wilke <kiste@netzworkk.de>
@@ -6,16 +6,16 @@ Homepage: http://www.netzworkk.org
 Build-Depends: debhelper (>= 10), gettext-base (>= 0.19.2~), po-debconf (>= 1.0.12)
 Standards-Version: 3.9.8
 
-Package: kwdjbdns_update
+Package: kwdjbdns-update
 Section: net
 Architecture: all
 Priority: optional
 Depends: debconf, djbdns (>= 1.05) | dbndns (>= 1.05), isc-dhcp-server, libappconfig-perl, perl
 Suggests: kwtools-net-djbdns
-Description: Network script kwdjbdns_update
- kwdjbdns_updates is a perl script dhcpd-to-tinydns update daemon.
+Description: Network script kwdjbdns-update
+ kwdjbdns-updates is a perl script dhcpd-to-tinydns update daemon.
  .
- kwdjbdns_update: This script reads a dhcpd.leases file and
+ kwdjbdns-update: This script reads a dhcpd.leases file and
  dynamically updates tinydns with hostname and ip information.
  .
  It assumes that your DHCP server recieves hostnames from the
